# CampusPulse

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  ENVIRONMENT.md  EventList.vue  PROJECT_INIT_SUMMARY.md  README.md  README_STARTUP.md  _llm_gen.py  docker-compose.yml  install_deps.bat  pyproject.toml  requirements.txt  requirements_latest.txt  start.bat  start.sh
backend/app/: config.py  dependencies.py  main.py
backend/app/algorithms/: comment_graph.py  risk_scoring.py  risk_signals.py
backend/app/api/: routes_analyze.py  routes_baseline.py  routes_cache.py  routes_events.py  routes_graph.py  routes_llm.py  (+2 more)
backend/tests/: conftest.py  test_anonymize.py  test_events_api.py  test_rag_service.py  test_report_api.py  test_schema.py
data/demo_cases/: E001.json
data/processed/: events.jsonl  events_raw.jsonl
docs/: CLEANUP_SUMMARY.md  ChatGPT-校园舆情风险演化雷达.md  FRONTEND_TECH_STACK_UPDATE.md  MVP_COMPLETE_SUMMARY.md  MVP_SUMMARY.md  MVP开发文档.md  STARTUP_GUIDE.md  实验与论文设计.md  小组创业答辩考核维度.md  小组创新论文考核维度.md  开发注意事项.md  开发规范与部署.md  校园舆情监测系统_三人分工与排期表.docx  校园舆情风险演化雷达.md  答辩展示与交付清单.md  详细设计.md  课程考核方法-考核方法.md  问题确认.md
docs/开发报告/: 2026-06-25-详细设计对齐完成报告.md  2026-06-25-详细设计对齐开发计划.md
frontend/: api_client.py  streamlit_app.py
frontend-vue/: index.html  package-lock.json  package.json
frontend-vue/src/: App.vue  main.ts  style.css
frontend/pages/: 1_事件总览.py  2_单事件分析.py  3_对比实验.py  4_证据化处置.py  5_报告导出.py
scripts/: anonymize_data.py  generate_demo_data.py  import_data.py  ingest_data.py  ingest_knowledge_base.py  precompute_analysis.py  test_api.py
(+37 files in other folders)
